add_subdirectory(api_gateway)
add_subdirectory(auth)
add_subdirectory(build_conf)
add_subdirectory(config_client)
add_subdirectory(config_server)
add_subdirectory(dir_service)
add_subdirectory(disk_proto)
add_subdirectory(download_service)
add_subdirectory(log)
add_subdirectory(orion_link_db)
add_subdirectory(platform)
add_subdirectory(register_client)
add_subdirectory(register_server)
add_subdirectory(upload_service)

